# weather-forecast

./: .cache.sqlite  .env  .gitignore  README.md  main.py  pyproject.toml  service.py
templates/: index.html
